crates/bitwarden-logging/tests/compilation_tests/skip_forbidden.rs
#[bitwarden_logging::instrument(skip(password))]
fn explicit_skip_should_fail(password: &str) {
    let _ = password;
}

fn main() {}
